<resources>
    <string name="app_name">Chart Analysis</string>
    <string name="title_reportitem_detail">ReportItem Detail</string>
    <string name="title_activity_chart">Дневной график</string>
    <string name="title_activity_splash_screen">Chart Analysis</string>
    <string name="title_activity_auth">Авторизация</string>
    <string name="dummy_content">Analytics</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_wrong_credentials">Неверное имя пользователя или пароль</string>
    <string name="auth_network_error">Ошибка во время соединения с сервером</string>
    <string name="drawer_open">+</string>
    <string name="drawer_close">-</string>
    <string name="email">grishberg@ya.ru</string>
    <string name="chart_select_product_title">Выберите номенклатуру в меню слева</string>
    <string name="dialog_select_daily_period_title">Выбор периода</string>
    <string name="dialog_select_daily_period_list_caption">Выберите период</string>
    <string name="dialog_select_daily_period_ok_caption">Подтвердить</string>
    <string name="candle_screen_menu_select_period">Выбор периода</string>
    <string name="about_text">Graph Analyser v.%s \nАвтор: Григорий Рылов</string>
    <string name="about_email_text">grishberg@ya.ru</string>
    <string name="main_screen_menu_about">О программе</string>
    <string name="main_screen_menu_save">Сохранить настройки</string>
    <string name="main_screen_menu_formula_settings">Настройка формул</string>
    <string name="candle_screen_menu_candle_chart_mode">Свечи</string>
    <string name="candle_screen_menu_line_chart_mode">Линейный график</string>
    <string name="candle_screen_menu_candle_and_line_mode">Свечи и линии</string>
    <string name="title_activity_products_list">ProductsListActivity</string>
    <string name="drawer_candles_btn_title">Свечи</string>
    <string name="drawer_lines_btn_title">Линейный график</string>
    <string name="drawer_candles_and_lines_btn_title">Свечи и линии</string>
    <!-- view_period_selector -->
    <string name="view_period_selector_3m">3 min</string>
    <string name="view_period_selector_15m">15 min</string>
    <string name="view_period_selector_30m">30 min</string>
    <string name="view_period_selector_1h">1 H</string>
    <string name="view_period_selector_1D">1 D</string>
    <string name="view_period_selector_1W">1 W</string>
    <string name="view_period_selector_1M">1 M</string>
    <string name="view_period_selector_1Y">1 Y</string>
    <string name="dialog_new_point_title">Новая точка</string>
    <!-- Диалог создания формулы -->
    <string name="dialog_new_point_name_hint">Название точки</string>
    <string name="dialog_new_point_items_formula_title">Формула:</string>
    <string name="dialog_new_point_percent_hint">%</string>
    <string name="dialog_new_point_grow_hint">ТР</string>
    <string name="dialog_new_point_fall_hint">ТП</string>
    <string name="dialog_new_point_vertex_title">Вершина:</string>

    <string name="dialog_new_point_vertex_item_all">Все</string>
    <string name="dialog_new_point_vertex_item_open">open</string>
    <string name="dialog_new_point_vertex_item_closed">closed</string>
    <string name="dialog_new_point_vertex_item_max">max</string>
    <string name="dialog_new_point_vertex_item_min">min</string>

    <string name="dialog_new_point_condition_item_less">&lt;</string>
    <string name="dialog_new_point_condition_item_greater">&gt;</string>
    <string name="dialog_new_point_color">цвет</string>
    <string name="chart_saving_message">Сохранено.</string>
    <string name="dialog_new_point_empty_name">Пустое имя формулы</string>
    <string name="dialog_new_point_empty_grow">Пустое значение ТР</string>
    <string name="dialog_new_point_empty_fall">Пустое значение ТП</string>
    <string name="candle_screen_menu_add_formula">Добавить формулу</string>
    <string name="title_activity_formula">Формулы</string>

</resources>
